// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemContainer > should render properly and trigger onClick when clicking on item 1`] = `
<div>
  <div
    class="sc-eqUAAy pUjyO"
    data-testid="item1-uuid"
    tabindex="0"
  />
</div>
`;

exports[`ItemContainer > should render properly and trigger onClick when clicking on sub item 1`] = `
<div>
  <div
    class="sc-eqUAAy pUjyO"
    data-testid="item1-uuid"
    tabindex="0"
  >
    <div
      class="sc-dcJsrY inVwNW"
    >
      <span
        aria-label="item1"
        role="img"
        title="item1"
      >
        <span
          class="sc-gEvEer BvlCj awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 1v14M15 8H1"
            />
          </svg>
        </span>
      </span>
    </div>
    <small
      class="sc-gsFSXq htvJUY awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_small-variant_18wu0_1elzt_227 awsui_color-inherit_18wu0_1elzt_367 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
    >
      item1 text
    </small>
    <div
      class="sc-kAyceB feIvxF"
    >
      <span
        class="sc-gEvEer BvlCj awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230 awsui_name-caret-right-filled_h11ix_1l964_260"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="filled stroke-linejoin-round"
            d="M5 4v8l6-4-6-4z"
          />
        </svg>
      </span>
    </div>
    <div
      class="sc-iGgWBj IVIIF"
      tabindex="0"
    >
      <div
        class="sc-eqUAAy pUjyO"
        data-testid="item2-uuid"
        tabindex="0"
      >
        <div
          class="sc-dcJsrY inVwNW"
        >
          <span
            aria-label="item2"
            role="img"
            title="item2"
          >
            <span
              class="sc-gEvEer BvlCj awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 1v14M15 8H1"
                />
              </svg>
            </span>
          </span>
        </div>
        <small
          class="sc-gsFSXq htvJUY awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_small-variant_18wu0_1elzt_227 awsui_color-inherit_18wu0_1elzt_367 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
        >
          item2 text
        </small>
      </div>
      <div
        class="sc-eqUAAy pUjyO"
        data-testid="item3-uuid"
        tabindex="0"
      >
        <small
          class="sc-gsFSXq eyMTAq awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_small-variant_18wu0_1elzt_227 awsui_color-inherit_18wu0_1elzt_367 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
        >
          item3 text
        </small>
        <div
          class="sc-kAyceB feIvxF"
        >
          <span
            class="sc-gEvEer BvlCj awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230 awsui_name-caret-right-filled_h11ix_1l964_260"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="filled stroke-linejoin-round"
                d="M5 4v8l6-4-6-4z"
              />
            </svg>
          </span>
        </div>
        <div
          class="sc-iGgWBj IVIIF"
          tabindex="0"
        >
          <div
            class="sc-eqUAAy hSUCiL"
            data-testid="item4-uuid"
            tabindex="0"
          >
            <small
              class="sc-gsFSXq eyMTAq awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_small-variant_18wu0_1elzt_227 awsui_color-inherit_18wu0_1elzt_367 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
            >
              item4 text
            </small>
          </div>
          <div
            class="sc-eqUAAy pUjyO"
            data-testid="item5-uuid"
            tabindex="0"
          >
            <small
              class="sc-gsFSXq eyMTAq awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_small-variant_18wu0_1elzt_227 awsui_color-inherit_18wu0_1elzt_367 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
            >
              item5 text
            </small>
          </div>
          <div
            class="sc-eqUAAy fEldwY"
            data-testid="item6-uuid"
            tabindex="0"
          >
            <small
              class="sc-gsFSXq eyMTAq awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_small-variant_18wu0_1elzt_227 awsui_color-text-status-inactive_18wu0_1elzt_361 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
            >
              item6 text
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemContainer > should render properly and trigger onClick when clicking on sub item 2`] = `
<div>
  <div
    class="sc-eqUAAy pUjyO"
    data-testid="item1-uuid"
    tabindex="0"
  >
    <div
      class="sc-dcJsrY inVwNW"
    >
      <span
        aria-label="item1"
        role="img"
        title="item1"
      >
        <span
          class="sc-gEvEer BvlCj awsui_icon_h11ix_ayzd6_101 awsui_size-normal-mapped-height_h11ix_ayzd6_157 awsui_size-normal_h11ix_ayzd6_153 awsui_variant-normal_h11ix_ayzd6_229"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 1v14M15 8H1"
            />
          </svg>
        </span>
      </span>
    </div>
    <small
      class="sc-gsFSXq htvJUY awsui_root_18wu0_16wz6_851 awsui_box_18wu0_16wz6_108 awsui_small-variant_18wu0_16wz6_116 awsui_color-inherit_18wu0_16wz6_256 awsui_font-size-default_18wu0_16wz6_124 awsui_font-weight-default_18wu0_16wz6_164"
    >
      item1 text
    </small>
    <div
      class="sc-kAyceB feIvxF"
    >
      <span
        class="sc-gEvEer BvlCj awsui_icon_h11ix_ayzd6_101 awsui_size-normal-mapped-height_h11ix_ayzd6_157 awsui_size-normal_h11ix_ayzd6_153 awsui_variant-normal_h11ix_ayzd6_229 awsui_name-caret-right-filled_h11ix_ayzd6_259"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="filled stroke-linejoin-round"
            d="M5 4v8l6-4-6-4z"
          />
        </svg>
      </span>
    </div>
    <div
      class="sc-iGgWBj IVIIF"
      tabindex="0"
    >
      <div
        class="sc-eqUAAy pUjyO"
        data-testid="item2-uuid"
        tabindex="0"
      >
        <div
          class="sc-dcJsrY inVwNW"
        >
          <span
            aria-label="item2"
            role="img"
            title="item2"
          >
            <span
              class="sc-gEvEer BvlCj awsui_icon_h11ix_ayzd6_101 awsui_size-normal-mapped-height_h11ix_ayzd6_157 awsui_size-normal_h11ix_ayzd6_153 awsui_variant-normal_h11ix_ayzd6_229"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 1v14M15 8H1"
                />
              </svg>
            </span>
          </span>
        </div>
        <small
          class="sc-gsFSXq htvJUY awsui_root_18wu0_16wz6_851 awsui_box_18wu0_16wz6_108 awsui_small-variant_18wu0_16wz6_116 awsui_color-inherit_18wu0_16wz6_256 awsui_font-size-default_18wu0_16wz6_124 awsui_font-weight-default_18wu0_16wz6_164"
        >
          item2 text
        </small>
      </div>
      <div
        class="sc-eqUAAy pUjyO"
        data-testid="item3-uuid"
        tabindex="0"
      >
        <small
          class="sc-gsFSXq eyMTAq awsui_root_18wu0_16wz6_851 awsui_box_18wu0_16wz6_108 awsui_small-variant_18wu0_16wz6_116 awsui_color-inherit_18wu0_16wz6_256 awsui_font-size-default_18wu0_16wz6_124 awsui_font-weight-default_18wu0_16wz6_164"
        >
          item3 text
        </small>
        <div
          class="sc-kAyceB feIvxF"
        >
          <span
            class="sc-gEvEer BvlCj awsui_icon_h11ix_ayzd6_101 awsui_size-normal-mapped-height_h11ix_ayzd6_157 awsui_size-normal_h11ix_ayzd6_153 awsui_variant-normal_h11ix_ayzd6_229 awsui_name-caret-right-filled_h11ix_ayzd6_259"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="filled stroke-linejoin-round"
                d="M5 4v8l6-4-6-4z"
              />
            </svg>
          </span>
        </div>
        <div
          class="sc-iGgWBj IVIIF"
          tabindex="0"
        >
          <div
            class="sc-eqUAAy hSUCiL"
            data-testid="item4-uuid"
            tabindex="0"
          >
            <small
              class="sc-gsFSXq eyMTAq awsui_root_18wu0_16wz6_851 awsui_box_18wu0_16wz6_108 awsui_small-variant_18wu0_16wz6_116 awsui_color-inherit_18wu0_16wz6_256 awsui_font-size-default_18wu0_16wz6_124 awsui_font-weight-default_18wu0_16wz6_164"
            >
              item4 text
            </small>
          </div>
          <div
            class="sc-eqUAAy pUjyO"
            data-testid="item5-uuid"
            tabindex="0"
          >
            <small
              class="sc-gsFSXq eyMTAq awsui_root_18wu0_16wz6_851 awsui_box_18wu0_16wz6_108 awsui_small-variant_18wu0_16wz6_116 awsui_color-inherit_18wu0_16wz6_256 awsui_font-size-default_18wu0_16wz6_124 awsui_font-weight-default_18wu0_16wz6_164"
            >
              item5 text
            </small>
          </div>
          <div
            class="sc-eqUAAy fEldwY"
            data-testid="item6-uuid"
            tabindex="0"
          >
            <small
              class="sc-gsFSXq eyMTAq awsui_root_18wu0_16wz6_851 awsui_box_18wu0_16wz6_108 awsui_small-variant_18wu0_16wz6_116 awsui_color-text-status-inactive_18wu0_16wz6_250 awsui_font-size-default_18wu0_16wz6_124 awsui_font-weight-default_18wu0_16wz6_164"
            >
              item6 text
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemContainer > should render properly and trigger onClick when clicking on sub item 3`] = `
<div>
  <div
    class="sc-eqUAAy pUjyO"
    data-testid="item1-uuid"
    tabindex="0"
  >
    <div
      class="sc-dcJsrY inVwNW"
    >
      <span
        aria-label="item1"
        role="img"
        title="item1"
      >
        <div
          class="sc-gEvEer BvlCj"
          data-mocked="Icon"
          name="add-plus"
          variant="normal"
        />
      </span>
    </div>
    <div
      class="sc-gsFSXq htvJUY"
      color="inherit"
      data-mocked="Box"
      leftpadding="0"
      variant="small"
    >
      item1 text
    </div>
    <div
      class="sc-kAyceB feIvxF"
    >
      <div
        class="sc-gEvEer BvlCj"
        data-mocked="Icon"
        name="caret-right-filled"
      />
    </div>
    <div
      class="sc-iGgWBj IVIIF"
      tabindex="0"
    >
      <div
        class="sc-eqUAAy pUjyO"
        data-testid="item2-uuid"
        tabindex="0"
      >
        <div
          class="sc-dcJsrY inVwNW"
        >
          <span
            aria-label="item2"
            role="img"
            title="item2"
          >
            <div
              class="sc-gEvEer BvlCj"
              data-mocked="Icon"
              name="add-plus"
              variant="normal"
            />
          </span>
        </div>
        <div
          class="sc-gsFSXq htvJUY"
          color="inherit"
          data-mocked="Box"
          leftpadding="0"
          variant="small"
        >
          item2 text
        </div>
      </div>
      <div
        class="sc-eqUAAy pUjyO"
        data-testid="item3-uuid"
        tabindex="0"
      >
        <div
          class="sc-gsFSXq eyMTAq"
          color="inherit"
          data-mocked="Box"
          variant="small"
        >
          item3 text
        </div>
        <div
          class="sc-kAyceB feIvxF"
        >
          <div
            class="sc-gEvEer BvlCj"
            data-mocked="Icon"
            name="caret-right-filled"
          />
        </div>
        <div
          class="sc-iGgWBj IVIIF"
          tabindex="0"
        >
          <div
            class="sc-eqUAAy hSUCiL"
            data-testid="item4-uuid"
            tabindex="0"
          >
            <div
              class="sc-gsFSXq eyMTAq"
              color="inherit"
              data-mocked="Box"
              variant="small"
            >
              item4 text
            </div>
          </div>
          <div
            class="sc-eqUAAy pUjyO"
            data-testid="item5-uuid"
            tabindex="0"
          >
            <div
              class="sc-gsFSXq eyMTAq"
              color="inherit"
              data-mocked="Box"
              variant="small"
            >
              item5 text
            </div>
          </div>
          <div
            class="sc-eqUAAy fEldwY"
            data-testid="item6-uuid"
            tabindex="0"
          >
            <div
              class="sc-gsFSXq eyMTAq"
              color="text-status-inactive"
              data-mocked="Box"
              variant="small"
            >
              item6 text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemContainer > should render properly when horizontal 1`] = `
<div>
  <div
    class="sc-eqUAAy bzhRcG"
    data-testid="item1-uuid"
    tabindex="0"
  />
</div>
`;

exports[`ItemContainer > should render selected item properly with custom menuHeight 1`] = `
<div>
  <div
    class="sc-eqUAAy jzvNAy"
    data-testid="item1-uuid"
    height="100px"
    tabindex="0"
  />
</div>
`;

exports[`ItemContainer > should render when feature is enabled 1`] = `
<div>
  <div
    class="sc-eqUAAy pUjyO"
    data-testid="item1-uuid"
    tabindex="0"
  />
</div>
`;
